(update) aop sample jdbc usage