@@ -1,13 +1,14 @@
 package info.vziks.api.aop;
 
 
-import com.sun.tools.javac.util.List;
 import org.aopalliance.intercept.MethodInterceptor;
 import org.aopalliance.intercept.MethodInvocation;
 import org.springframework.aop.ClassFilter;
 import org.springframework.aop.support.StaticMethodMatcherPointcut;
 
 import java.lang.reflect.Method;
+import java.util.ArrayList;
+import java.util.Arrays;
 
 /**
  * Class BeanDecorator
@@ -39,6 +40,6 @@ public class BeanMethodDecorator extends StaticMethodMatcherPointcut implements 
     @Override
     public ClassFilter getClassFilter() {
 //        return clazz -> (clazz == Bean.class);
-        return clazz -> (List.of(Bean.class, Pickles.class).contains(clazz));
+        return clazz -> (new ArrayList<>(Arrays.asList(Bean.class, Pickles.class)).contains(clazz));
     }
 }
